--- a/ansible/inventories/vagrant/group_vars/all/storage.yml
+++ b/ansible/inventories/vagrant/group_vars/all/storage.yml
@@ -322,6 +322,26 @@ glusterfs_volumes:
       app.kubernetes.io/name: gitlab
       app.kubernetes.io/component: gitlab
       storage: data
+  gitea-data:
+    replicas: 2
+    capacity: 256M
+    arbiterCapacity: 16M
+    nodes: [master-test-2, master-test-3]
+    arbiters: [master-test-1]
+    reclaim_policy: Retain
+    labels:
+      app.kubernetes.io/name: gitea
+      app.kubernetes.io/component: gitea
+  gitea-pgsql:
+    replicas: 2
+    capacity: 512M
+    arbiterCapacity: 32M
+    nodes: [master-test-2, master-test-3]
+    arbiters: [master-test-1]
+    reclaim_policy: Retain
+    labels:
+      app.kubernetes.io/name: gitea
+      app.kubernetes.io/component: pgsql
   kibana-data:
     replicas: 2
     capacity: 64M
