--- a/ansible/install_applications/site.yml
+++ b/ansible/install_applications/site.yml
@@ -187,6 +187,10 @@
   tags: kubernetes-app-dev-gitlab
   when: gitlab_enabled | bool
 
+- import_playbook: app-dev-gitea.yml
+  tags: kubernetes-app-dev-gitea
+  when: gitea_enabled | bool
+
 - import_playbook: app-download-sickchill.yml
   tags: kubernetes-app-download-sickchill
   when: sickchill_enabled | bool
