Rename user names to make a difference between LDAP and local

--- a/ansible/install_applications/roles/home_zwavejs2mqtt_deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/home_zwavejs2mqtt_deploy/defaults/main.yml
@@ -19,6 +19,6 @@ zwavejs2mqtt_authentication_enabled: True
 #});
 #EOF
 zwavejs2mqtt_users:
-  - username: admin
+  - username: user_local
     # zwave
     passwordHash: "796211d6aa1c8b60:c94464f31fc489ce35044eded42e1aee2aac656488222af4ecfd57abca23b0ec1a7f83761d5f330c86d04529fc052189c3881a9aaadd9ef6201a8d71afbf8a90"
