--- a/ansible/inventories/vagrant/group_vars/all/apps/home-zigbee2mqtt.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/home-zigbee2mqtt.yml
@@ -1,5 +1,5 @@
 ---
-zigbee2mqtt_mqtt_user: user
+zigbee2mqtt_mqtt_user: user_local
 zigbee2mqtt_mqtt_password: Passw0rd
 
 # define mandatory variables to avoid issues with helpers/release-watcher
