--- a/ansible/inventories/vagrant/group_vars/all/apps/infra-gotify.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/infra-gotify.yml
@@ -2,7 +2,7 @@
 gotify_default_admin_password: Passw0rd
 
 gotify_standard_user:
-  name: user
+  name: user_local
   password: Passw0rd
 
 gotify_homeassistant_enabled: True
