--- a/ansible/inventories/vagrant/group_vars/all/apps/tool-paperless.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/tool-paperless.yml
@@ -3,6 +3,6 @@ paperless_secret_key: "abcdefghijklmnopqrstuvwxyz1234567890"
 paperless_pgsql_password: "Passw0rd"
 paperless_redis_password: "Passw0rd"
 
-paperless_admin_user: "admin"
+paperless_admin_user: "admin_local"
 paperless_admin_mail: "admin@email.net"
 paperless_admin_password: "Passw0rd"
