--- a/ansible/inventories/vagrant/group_vars/all/apps/web-homer.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/web-homer.yml
@@ -45,7 +45,7 @@ homer_images_to_download:
     source: https://raw.githubusercontent.com/leenooks/phpLDAPadmin/master/htdocs/images/default/logo-small.png
 
   - name: ttrss.png
-    source: https://git.tt-rss.org/fox/tt-rss/raw/branch/master/images/favicon-72px.png
+    source: https://git-gitea.tt-rss.org/fox/tt-rss/raw/branch/master/images/favicon-72px.png
 
   - name: paperless.svg
     source: https://raw.githubusercontent.com/jonaswinkler/paperless-ng/master/resources/logo/web/svg/square.svg
