Use replicas for the nginx ingress controller

--- a/ansible/install_infra/roles/kubernetes_nginx_ingress_deploy/defaults/main.yml
+++ b/ansible/install_infra/roles/kubernetes_nginx_ingress_deploy/defaults/main.yml
@@ -1,3 +1,4 @@
 ---
 #kubernetes_nginx_ingress_openldap_target: "openldapservice:openldapport"
 #kubernetes_nginx_ingress_mqtt_target: "mqttservice:mqttport"
+kubernetes_nginx_ingress_controller_replicas: 2
