--- a/ansible/inventories/vagrant/group_vars/all/apps/infra-docker-registry.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/infra-docker-registry.yml
@@ -2,6 +2,8 @@
 # It's required to redefine this variable even if it's the same value as the default one to have it available for openssl-pki
 docker_registry_servername: docker-registry.infra-docker-registry.svc.cluster.local
 
+docker_registry_http_secret: abcdefghijklmnopqrstuvwxyz123456
+
 docker_registry_kube_registry_username: kube
 docker_registry_kube_registry_password: Passw0rd
 docker_registry_ui_registry_username: docker_registry_ui
