Revert "Remove old kubelet workarounds"
This reverts commit 85d4c53e05f57920fae7880f0129191775d3607f.

--- a/ansible/install_infra/roles/kubernetes_node_preinstall/defaults/main.yml
+++ b/ansible/install_infra/roles/kubernetes_node_preinstall/defaults/main.yml
@@ -26,3 +26,5 @@ kubernetes_kubelet_extra_parameters:
   # avoid "Failed to start ContainerManager failed to initialise top level QOS containers" error (ref: https://github.com/kubernetes/kubernetes/issues/43856)
   # avoid "kubelet crashes with: root container [kubepods] doesn't exist" (ref: https://github.com/kubernetes/kubernetes/issues/95488)
   # Also configured in kubeadm_config.yaml
+  - --cgroups-per-qos=false
+  - --enforce-node-allocatable=''
