--- a/ansible/install_applications/vars/monitoring-pihole-exporter.yml
+++ b/ansible/install_applications/vars/monitoring-pihole-exporter.yml
@@ -4,7 +4,7 @@ _pihole_exporter_var_loader:
   base_image:
     repo: "docker.io"
     name: "ekofr/pihole-exporter"
-    tag: "0.0.10"
+    tag: "v0.3.0"
 
 pihole_exporter:
   enabled: "{{ pihole_exporter_enabled | default(True) }}"
