--- a/ansible/install_applications/vars/home-homeassistant.yml
+++ b/ansible/install_applications/vars/home-homeassistant.yml
@@ -4,7 +4,7 @@ _homeassistant_var_loader:
   base_image:
     repo: "docker.io"
     name: homeassistant/home-assistant
-    tag: "2021.12.10"
+    tag: "2022.3.5"
   namespace: "home-homeassistant"
 
 homeassistant:
@@ -77,7 +77,7 @@ _homeassistant_mysql_var_loader:
   base_image:
     repo: "docker.io"
     name: "library/mysql"
-    tag: "8.0.28"
+    tag: "8.0.28-debian"
 
 homeassistant_mysql:
   base_image: "{{ _homeassistant_mysql_var_loader.base_image }}"
