--- a/ansible/install_applications/site.yml
+++ b/ansible/install_applications/site.yml
@@ -139,6 +139,10 @@
   tags: kubernetes-app-tool-olivetin
   when: olivetin_enabled | bool
 
+- import_playbook: app-tool-syncthing.yml
+  tags: kubernetes-app-tool-syncthing
+  when: syncthing_enabled | bool
+
 - import_playbook: app-infra-unifi.yml
   tags: kubernetes-app-infra-unifi
   when: unifi_enabled | bool
